--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="accept">Accept</string>
     <string name="mobile">mobile no</string>
     <string name="gender">gender</string>
+    <string name="error">Error message</string>
 </resources>
